k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lpmde-service
  namespace: lpmde-production
  labels:
    app: lpmde
spec:
  type: NodePort
  selector:
    app: lpmde
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
    name: http
